# tidy

./: .gitignore  LICENSE  README.md  organize.py  pyproject.toml
src/tidy/: __init__.py  cli.py  core.py  gui.py  scan.py
